# llm-from-scratch

./: .gitignore  LICENSE.md  README.md  TECHNICAL.md  pyproject.toml
data/: stranger.txt
docs/: 02-the-transformer.md  03-training-loop.md  GLOSSARY.md
llm/: config.py  main.py  model.py  tokenizer.py  trainer.py
visualizations/: transformer_flow.html
