[project]
name = "llm-from-scratch"
version = "0.1.0"
description = "Train a GPT from scratch on a MacBook"
authors = [{ name = "John Gardner (Sinjhin)", email = "john@ardea.io" }]
readme = "README.md"
license = { file = "LICENSE.md" }
requires-python = ">=3.12,<3.13"
dependencies = [
    "clearml>=2.1.8",
    "datasets>=4.5.0",
    "huggingface-hub>=1.8.0",
    "numpy>=2.0.2",
    "python-dotenv>=1.2.2",
    "rich>=15.0.0",
    "tiktoken>=0.12.0",
    "torch>=2.8.0",
    "tqdm>=4.67.3",
]

[project.scripts]
app = "llm.main:main"
train = "llm.main:train"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["llm"]

[dependency-groups]
dev = [
    "pytest",
    "pytest-asyncio",
    "ruff",
    "ty",
]

[tool.ruff]
line-length = 180
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.ty.environment]
python-version = "3.12"

[tool.ty.rules]
# unresolved-attribute = "ignore"  # mixin self-refs + dict/tensor/getattr dynamics
